# ChangeLog for x11-libs/qt-assistant
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-assistant/ChangeLog,v 1.33 2009/03/18 22:17:37 hwoarang Exp $

  18 Mar 2009; Markos Chandras <hwoarang@gentoo.org>
  -qt-assistant-4.5.0_rc1.ebuild:
  Dropping 4.5.0_rc1

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> qt-assistant-4.5.0.ebuild:
  Add ~alpha/~ia64

  17 Mar 2009; Raúl Porcel <armin76@gentoo.org> qt-assistant-4.5.0.ebuild:
  Add ~arm wrt #262462

  16 Mar 2009; Alexis Ballier <aballier@gentoo.org>
  qt-assistant-4.5.0.ebuild:
  keyword ~x86-fbsd

  16 Mar 2009; Zac Medico <zmedico@gentoo.org> qt-assistant-4.4.2-r1.ebuild,
  qt-assistant-4.5.0_rc1.ebuild, qt-assistant-4.5.0.ebuild:
  Bug #262457 - Add !<x11-libs/qt-4.4.0:4 blockers due to file collisions.

*qt-assistant-4.5.0 (04 Mar 2009)

  04 Mar 2009; Ben de Groot <yngwin@gentoo.org> +qt-assistant-4.5.0.ebuild:
  Version bump

  18 Feb 2009; Jeroen Roovers <jer@gentoo.org> qt-assistant-4.4.2-r1.ebuild:
  Stable for HPPA (bug #248083).

*qt-assistant-4.5.0_rc1 (11 Feb 2009)

  11 Feb 2009; Ben de Groot <yngwin@gentoo.org>
  +qt-assistant-4.5.0_rc1.ebuild:
  Version bump. Dropping keywords for arches that don't have qt-webkit
  keyworded, which is now a hard dependency.

  06 Feb 2009; Raúl Porcel <armin76@gentoo.org>
  qt-assistant-4.4.2-r1.ebuild:
  ia64/sparc stable wrt #248038

  04 Feb 2009; Brent Baude <ranger@gentoo.org> qt-assistant-4.4.2-r1.ebuild:
  Marking qt-assistant-4.4.2-r1 ppc64 stable for bug 248038

  04 Feb 2009; Ben de Groot <yngwin@gentoo.org> qt-assistant-4.4.2-r1:
  Clean up DEPEND now that proper webkit useflag masks are in profiles

  31 Jan 2009; Tobias Klausmann <klausman@gentoo.org>
  qt-assistant-4.4.2-r1.ebuild:
  Stable on alpha, bug #248038

  29 Jan 2009; Alexis Ballier <aballier@gentoo.org>
  qt-assistant-4.4.2-r1.ebuild:
  keyword ~x86-fbsd

  18 Jan 2009; Markus Meier <maekke@gentoo.org>