@@ -1,13 +1,11 @@
 AUX Assistant.desktop 368 RMD160 dd28aea43bc8e013e6631d0ee91449b8a2e9594d SHA1 515684005a50bfa19ed84fb4105fbb9317ad5d99 SHA256 77b0852193675857141e0ce9ac521cfdab1506a822436a0dec4c4221a680cc4b
 DIST qt-mac-opensource-src-4.4.2.tar.bz2 100715282 RMD160 6c92c2d745ca75fc9779f360825a48c29689ff61 SHA1 217e2d4f80d1c6d68d6bdfe8c757b2bfee929421 SHA256 1191d87e55a718a6cd2d20c2cf43f93ca98de5aebfa49152ef2551ee36914e56
-DIST qt-mac-opensource-src-4.5.0-rc1.tar.bz2 108654601 RMD160 36c7490f9e4d55d86d875d91357c57ecd4acd8f3 SHA1 93e593b68e974ee30c7a044a7373ba2d3878def2 SHA256 e96eff94f40752da6c0eb64f91c58346a2d87a2b2f7a09155d509cb8195881bf
 DIST qt-mac-opensource-src-4.5.0.tar.bz2 111184478 RMD160 1df7c97276d89b814b867abc3d53a9423f720181 SHA1 a9704ccc501e66360015f33d97e939d5e2ab7c81 SHA256 baccbfa5c55da9a1f97192ec643b63f7e8afc2d51eab5f954617efd321fab947
 DIST qt-x11-opensource-src-4.4.2-headers.tar.bz2 2509611 RMD160 3424d4049f1c06959bd57a98e3933636515c60fa SHA1 f0945230b8856b446f03473c18474e9224b30fcf SHA256 aa02d9e2c017ff92d91ef73781d4d1a28be53136886ac99275df053fe31d1fff
 DIST qt-x11-opensource-src-4.4.2.tar.bz2 102816706 RMD160 5719ab5800ca181417e0dff7f961af7b371ddd97 SHA1 0bc56934565f529a2708533a4f160fbc87b9d9e0 SHA256 0530fefc452e5029877739164e133de7df5faa519b0fb3d9fcf40b467350c675
-DIST qt-x11-opensource-src-4.5.0-rc1.tar.bz2 110889586 RMD160 60b410f1776d5f55863543fcd4dd3a8105864ec1 SHA1 1dffebc52543ee8dd486ec69fc51d02e216323bd SHA256 94aa6268662a24cec1a20e2fb88fcac418101719c0e1ab2729289fd8b7d475d7
 DIST qt-x11-opensource-src-4.5.0.tar.bz2 113335010 RMD160 5714f2772ce358e6528ec13121aebc8e63e848cf SHA1 db136bbed1715c155ceb610309d33f943c1df8fd SHA256 e1b356a54e65781ed94f19d785356a88daa8d38b9dbbca35439b80ca8c4a5be9
 EBUILD qt-assistant-4.4.2-r1.ebuild 2168 RMD160 99ed5ce8df26dc91427cf965bf3251a99e5938af SHA1 bdbc7a85dd78dbfb8b59b445fee5f160033fb9d9 SHA256 37cc9e88d7869a8f13d6fc69da3570f6a3777bc2424613e44e69e1bc6d193549
+EBUILD qt-assistant-4.5.0-r1.ebuild 1950 RMD160 694608d00ff0059d612e376637b76c606c34c05f SHA1 6f9ba18ed4a66ff97a2813c8bd60bf1830840fd4 SHA256 04687e14890b8bc39cf891b9055db971a0a2ef3fcadf85aed72a047ee42d407f
 EBUILD qt-assistant-4.5.0.ebuild 1551 RMD160 698e77e9ffdcad67776968975b45f3e3048fdfe2 SHA1 ad2a17b762405fd2a62ea0767060dd8b780c582f SHA256 0d062d58759f2038f50c091c878fbb4de898827b7a08848cbf8ef1fccf860a28
-EBUILD qt-assistant-4.5.0_rc1.ebuild 1622 RMD160 505cc308bcd9370ed3db6a19fb2bda0ddc61c376 SHA1 c50967a3fe90e0efb8fa6a16057e62ea288ef13a SHA256 4154aeefdf7c959ff2e72e45846cc2f1e13066d5234496cff7eaf48093c8ef31
-MISC ChangeLog 4935 RMD160 c9ed55f239d1202401f36c7a87a55b665163e996 SHA1 5fa7ac182a9db0a38df3a8ec9640ad6c837045fc SHA256 e37cdab09636fdbd46a28344a7e9f8f46b7f4d81967136323289f56157e8539d
+MISC ChangeLog 5098 RMD160 b0d9416c5773a1c401199a1082ab9f8db3de739f SHA1 2e924fbbbd350a6a7356fa3321102f4a12f86b7e SHA256 6e5c8853df226d8cb8af54241ad3cb5435e5705625d7f25c1b7a851fefc86ddb
 MISC metadata.xml 342 RMD160 39caad45b183f242fcd2bb217ec6c8b743aca822 SHA1 459e60db07dbed8f1aa5b3b66194abfd5db74625 SHA256 e91ea92bd61f65a4a215796c172d0689b71910b336c70d039d9e8c1d3e66e549
