@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/qt-assistant
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-assistant/ChangeLog,v 1.33 2009/03/18 22:17:37 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-assistant/ChangeLog,v 1.34 2009/04/14 12:35:47 hwoarang Exp $
+
+*qt-assistant-4.5.0-r1 (14 Apr 2009)
+
+  14 Apr 2009; Markos Chandras <hwoarang@gentoo.org>
+  +qt-assistant-4.5.0-r1.ebuild:
+  Install menu icon. Fixes bug 241208
 
   18 Mar 2009; Markos Chandras <hwoarang@gentoo.org>
   -qt-assistant-4.5.0_rc1.ebuild:
